stoat/tests/snapshots/snapshots/snapshots__editor__after-escape.snap
---
source: stoat/tests/snapshots/editor.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:Hi |hello world
