stoat/tests/snapshots/snapshots/snapshots__editor__after-typing.snap
---
source: stoat/tests/snapshots/editor.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=insert
  1:Hi |hello world
