stoat/tests/snapshots/snapshots/snapshots__editor__before-zz.snap
---
source: stoat/tests/snapshots/editor.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:Line 0
  2:Line 1
  3:Line 2
  4:Line 3
  5:Line 4
  6:Line 5
  7:Line 6
  8:Line 7
  9:Line 8
 10:Line 9
 11:Line 10
 12:Line 11
 13:Line 12
 14:Line 13
 15:Line 14
 16:Line 15
 17:Line 16
 18:Line 17
 19:Line 18
 20:Line 19
 21:Line 20
 22:Line 21
 23:Line 22
 24:Line 23
 25:Line 24
 26:Line 25
 27:Line 26
 28:Line 27
 29:Line 28
 30:Line 29
 31:Line 30
 32:Line 31
 33:Line 32
 34:Line 33
 35:Line 34
 36:Line 35
 37:Line 36
 38:Line 37
 39:Line 38
 40:Line 39
 41:Line 40
 42:Line 41
 43:Line 42
 44:Line 43
 45:Line 44
 46:Line 45
 47:Line 46
 48:Line 47
 49:Line 48
 50:Line 49
 51:|Line 50
 52:Line 51
 53:Line 52
 54:Line 53
 55:Line 54
 56:Line 55
 57:Line 56
 58:Line 57
 59:Line 58
 60:Line 59
 61:Line 60
 62:Line 61
 63:Line 62
 64:Line 63
 65:Line 64
 66:Line 65
 67:Line 66
 68:Line 67
 69:Line 68
 70:Line 69
 71:Line 70
 72:Line 71
 73:Line 72
 74:Line 73
 75:Line 74
 76:Line 75
 77:Line 76
 78:Line 77
 79:Line 78
 80:Line 79
 81:Line 80
 82:Line 81
 83:Line 82
 84:Line 83
 85:Line 84
 86:Line 85
 87:Line 86
 88:Line 87
 89:Line 88
 90:Line 89
 91:Line 90
 92:Line 91
 93:Line 92
 94:Line 93
 95:Line 94
 96:Line 95
 97:Line 96
 98:Line 97
 99:Line 98
100:Line 99
